@@ -12,6 +12,11 @@ apm-server:
     # To enable experimental frontend support set this to true.
     enabled: false
 
+  # Tracing support for the server's HTTP endpoints and event publisher.
+  #tracing:
+    # Set to true to enable tracing in the APM server itself.
+    #enabled: false
+
   # Authorization token to be checked. If a token is set here the agents must
   # send their token in the following format: Authorization: Bearer <secret-token>.
   # It is recommended to use an authorization token in combination with SSL enabled.
